# evaVM

./: .gitignore  CMakeLists.txt  EvaVM.cpp  Makefile  README.md  hello_test.cpp  runBuild.sh
src/bytecode/: JavaBytecode.java  OpCode.h
src/compiler/: EvaCompiler.h  Scope.h
src/disassembler/: EvaDisassembler.h
src/gc/: EvaCollector.h
src/parser/: EvaGrammar.bnf  EvaParser.h
src/vm/: EvaVM.h  EvaValue.h  Global.h  Logger.h
test/: CMakeLists.txt  branching.h  classes.h  closures.h  comparison_ops.h  eva_basic.cpp  eva_symbols.h  functions.h  localvars.h  math_ops.h  test.eva  variables.h
